--- a/style.css
+++ b/style.css
@@ -18,14 +18,14 @@
 html {
   font-size: 62.5%;
   overflow-x: hidden;
-}
+  width: 100%;
 body {
   background: var(--bg-color);
   font-family: "Poppins", sans-serif;
   color: var(--text-color);
   overflow-x: hidden;
-  width: 100dvh;
-  height: 100dvh;
+  width: 100%;
+}
 }
 html::-webkit-scrollbar {
   width: 0.8rem;
@@ -43,7 +43,7 @@ html::-webkit-scrollbar-thumb {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100dvh;
+  width: 100%;
   padding: 1rem 9%;
   background: rgba(0, 0, 0, 0.7);
   filter: drop-shadow(10px);
@@ -82,7 +82,7 @@ html::-webkit-scrollbar-thumb {
     position: absolute;
     top: 100%;
     left: 0;
-    width: 100dvh;
+    width: 100%;
     padding: 1rem 3%;
     background: #000000;
     border-top: 0.1rem solid var(--main-color);
@@ -348,6 +348,12 @@ span {
     flex-direction: column;
     
   }
+  .infoservices h4{
+    font-size: 3rem;
+  }
+  .infoservices p{
+    font-size: 2rem;
+  }
 }
 /* educacão */
 .education {
@@ -593,3 +599,4 @@ span {
   background: var(--main-color);
   color: white;
 }
+  
