--- a/style.css
+++ b/style.css
@@ -512,9 +512,49 @@ span {
   animation: glow 2s ease infinite alternate;
   
 }
+.nlw a{
+  display:inline flex;
+  justify-content:center;
+  align-items:center;
+  font-family: "Poppins", sans-serif;
+  font-size:6rem;
+  color:white;
+  background:transparent;
+  transition: all 0.5s ease;
+  border-radius:50%;
+  
+  
+}
+.nlw a:hover{
+  color: var(--main-color);
+  transform: scale(1.03) translateY(-2px);
+  box-shadow:0 0 25px #ffffff;
+  border:0.2rem solid #ffffff;
+}
+
+/* .social-icon a {
+  display: inline flex;
+  justify-content: center;
+  align-items: center;
+  height: 4rem;
+  width: 4rem;
+  font-size: 2rem;
+  background: transparent;
+  border: 0.2rem solid var(--main-color);
+  border-radius: 50%;
+  color: var(--main-color);
+  margin: 3rem 1.5rem 3rem 0;
+  transition: 0.3s ease;
+}
+.social-icon a:hover {
+  color: #000;
+  transform: scale(1.3) translateY(-5px);
+  background: var(--main-color);
+  box-shadow: 0 0 25px var(--main-color);
+} */
 @keyframes glow{
   from{
-    box-shadow:0 0 100px 2px var(--main-color);
+    box-shadow:0 0 25px var(--main-color);
 
   }
   to{
